# atomkit

./: .gitignore  AS_writeup.txt  AUTOSTRUCTURE_COMPLETE.md  AUTOSTRUCTURE_COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  INTEGRATION_PROGRESS.md  LICENSE  PHASES_2_5_IMPLEMENTATION_COMPLETE.md  README.md  SALGEB_IMPLEMENTATION_COMPLETE.md  SETUP_GUIDE.md  SIMPLIFICATION_SUMMARY.md  check_k_holes.py  debug_configs.py  debug_diagram_satellite.py  environment.yml  pyproject.toml  run_tests.py  stdout.txt  test_satellites.py  test_shakeoff.py  test_universal_analysis.py  verify_install.py
docs/: API_REFERENCE.md  AUTOSTRUCTURE_LAMBDA_OPTIMIZATION.md  README.md  UNIFIED_READER_INTERFACE.md  quick_start.md
docs_archive/: CLEANUP_GUIDE.md  CLEANUP_INSTRUCTIONS.txt  CLEANUP_PLAN.md  QUICK_REFERENCE.md  README.md  README_UPDATE_NOTES.md  READY_TO_CLEAN.md  cleanup.sh  tests_clean_version.py
docs_archive/autos_reference_data/amdpp.phys.strath.ac.uk/autos/default/data/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D  run_test
docs_archive/autos_reference_data/amdpp.phys.strath.ac.uk/autos/default/data/test_1/: das_1  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D  olg  ols
docs_archive/autos_reference_data/amdpp.phys.strath.ac.uk/autos/default/data/test_10/: adf04ic  adf04ls  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D  olg
docs_archive/autos_reference_data/amdpp.phys.strath.ac.uk/autos/default/data/test_11/: TERMS  olg  (+10 more)
examples/: PRESENTATION_EXAMPLES_GUIDE.md  README.md  README_fac_reader_demo.md  advanced_configuration_generation.py  autostructure_reader_demo.py  autostructure_ux_examples.py  autostructure_workflow.py  basic_usage.py  basic_usage_example.py  explicit_parameters_demo.py  fac_reader_demo.py  fac_reader_example.py  fac_wrapper_demo.py  lambda_optimization_demo.py  presentation_advanced_configs.py  presentation_comparison.py  presentation_input_comparison.py  reading_levels_example.py  reading_transitions_example.py  test_fac_readers.py  transition_labelling_example.py  unified_comparison.py
examples/as_inputs/: .gitignore  README.md
examples/fac_inputs/: .gitignore  README.md  cu_photoionization.sf  fe17_structure.sf  fe24_autoionization.sf
examples/fac_outputs/: README.md
examples/presentation_gists/: 01_fac_traditional.py  02_autostructure_traditional.das  03_atomkit_fac.py  04_atomkit_autostructure.py  QUICK_START.md  README.md  VISUAL_COMPARISON.md
examples_archive/: README.md  autostructure_ux_examples.py  autostructure_wrapper_demo.py  fac_to_as_converter.py  fac_wrapper_demo.py  ls_to_icr_converter.py
src/atomkit/: STRUCTURE.md  __init__.py  configs.py  configuration.py  definitions.py  generators.py  readers.py  shell.py  utilis.py  utils.py
src/atomkit/analysis/: __init__.py  plotting.py  spectral.py
src/atomkit/autostructure/: README.md  __init__.py  as_writer.py
src/atomkit/cli/: README.md  __init__.py  example.py  interactive_plotter.py
src/atomkit/constants/: __init__.py
src/atomkit/converters/: __init__.py  as_generator.py  fac_to_as.py  ls_to_icr.py
src/atomkit/core/: __init__.py  backends.py  calculation.py  schema.py  specs.py
src/atomkit/fac/: README.md  __init__.py  sfac_writer.py
src/atomkit/physics/: README.md  __init__.py  cross_sections.py  plotting.py  potentials.py  units.py
src/atomkit/readers/: __init__.py  autoionization.py  autostructure.py  base.py  labeling.py  levels.py  siegbahn.py  transitions.py  unified.py
src/atomkit/structure/: __init__.py  configuration.py  shell.py
src/atomkit/utils/: __init__.py
tests/: README.md  compare_siegbahn_labeling.py  compare_siegbahn_labeling_all.py  test_as_generator.py  test_as_writer.py  test_as_writer_ux.py  test_configuration.py  test_fac_wrapper.py  test_full_spectrum_builder.py  test_plotting.py  test_recreate_graph_exact.py  test_shell.py  test_unified_interface.py  test_xrlabel_vs_backend.py  test_xrlabel_vs_backend_realdata.py
tests/manual_tests/: test_coupling_behavior.py  test_fac_backend.py  test_simple.py  test_verify_modules.py
tests/reference_recreation/: manual_test_das1.py  test_all_21_das_files.py  test_as_reference_recreation.py  test_recreate_as_simple.py
tests_archive/: AUTOS_TESTS_README.md  REFACTORING_PROPOSAL.md  test_as_writer.py  test_as_writer_ux.py  test_autos_reference.py  test_autos_reference_clean.py  test_fac_converter.py  test_ls_to_icr.py  test_physics.py  test_unified_interface.py
tests_archive/manual_tests/: test_coupling_behavior.py  test_parameter_usage.py  test_phase7_fixes.py
(+191 files in other folders)
